--- a/views/elephant.erb
+++ b/views/elephant.erb
@@ -1,4 +1,4 @@
-<%#= luck_num = rand(100) %>
+<%=#luck_num = rand(100) %>
 <h1>Dice Roll</h1>
   <ul>
     <li><a href="/dice/2/6">Roll two 6-sided dice</a></li>
@@ -6,4 +6,4 @@
     <li><a href="/dice/5/4">Roll five 4-sided dice</a></li>
     <li><a href="/dice/8/20">Roll eight 20-sided dice</a></li>
   </ul>
-  <p>Luck # = <%= luck_num %></p>
+  <p>Luck # = <%= @uck_num %></p>
