--- a/views/eight_twenty.erb
+++ b/views/eight_twenty.erb
@@ -1,2 +1,11 @@
-<h1>8d20</h1>
-<p><%= @outcome %></p>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Dice Roll</title>
+</head>
+
+<body>
+  <h1>8d20</h1>
+  <p><%= @outcome %></p>
+</body>
+</html>
