--- a/views/elephant.erb
+++ b/views/elephant.erb
@@ -1,9 +1,17 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Dice Roll</title>
+</head>
 
-<h1>Dice Roll</h1>
-  <ul>
-    <li><a href="/dice/2/6">Roll two 6-sided dice</a></li>
-    <li><a href="/dice/3/8">Roll three 8-sided dice</a></li>
-    <li><a href="/dice/5/4">Roll five 4-sided dice</a></li>
-    <li><a href="/dice/8/20">Roll eight 20-sided dice</a></li>
-  </ul>
-  <p>Luck # = <%= @luck_num %></p>
+<body>
+  <h1>Dice Roll</h1>
+    <ul>
+      <li><a href="/dice/2/6">Roll two 6-sided dice</a></li>
+      <li><a href="/dice/3/8">Roll three 8-sided dice</a></li>
+      <li><a href="/dice/5/4">Roll five 4-sided dice</a></li>
+      <li><a href="/dice/8/20">Roll eight 20-sided dice</a></li>
+    </ul>
+    <p>Luck # = <%= @luck_num %></p>
+</body>
+</html>
