--- a/views/three_eight.erb
+++ b/views/three_eight.erb
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Dice Roll</title>
+</head>
 
-<h1>3d8</h1>
-<p><%= @outcome %></p>
+<body>
+  <h1>3d8</h1>
+  <p><%= @outcome %></p>
+</body>
+</html>
