--- a/views/two_six.erb
+++ b/views/two_six.erb
@@ -1,5 +1,12 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Dice Roll</title>
+</head>
 
+<body>
+  <h1>2d6</h1>
 
-<h1>2d6</h1>
-
-<p><%= @outcome %></p>
+  <p><%= @outcome %></p>
+</body>
+</html>
