--- a/views/elephant.erb
+++ b/views/elephant.erb
@@ -11,6 +11,7 @@
       <li><a href="/dice/3/8">Roll three 8-sided dice</a></li>
       <li><a href="/dice/5/4">Roll five 4-sided dice</a></li>
       <li><a href="/dice/8/20">Roll eight 20-sided dice</a></li>
+      <li><a href="/dice/100/6">Roll one hundred 6-sided dice</a></li>
     </ul>
     <p>Luck # = <%= @luck_num %></p>
 </body>
