--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,15 +2,23 @@
 <html>
 <head>
   <title>Dice Roll</title>
+
+  <style>
+    .navbar {
+      display: flex;
+      justify-content: space-around;
+    }
+  </style>
 </head>
 
 <body>
-  <div>
+  <div class="navbar">
     <div><a href="/">Home</a></div>
     <div><a href="/dice/2/6">2d6</a></div>
     <div><a href="/dice/3/8">3d8</a></div>
     <div><a href="/dice/5/4">5d4</a></div>
     <div><a href="/dice/8/20">8d20</a></div>
+    <div><a href="/dice/100/6">100d6</a></div>
   </div>
 
   <%= yield %>
