--- a/views/three_eight.erb
+++ b/views/three_eight.erb
@@ -1,4 +1,10 @@
   
-  <h1>3d8</h1>
-  <p><%= @outcome %></p>
+<h1>3d8</h1>
 
+<ul>
+  <li><%= @first_die %></li>
+  <li><%= @second_die %></li>
+  <li><%= @third_die %></li>
+</ul>
+
+<p><%= @outcome %></p>
